- https://github.com/eclipse-syson/syson/issues/585[#585] [diagrams] Add a new tool allowing to create an _ExhibitState_ at the root of General View and StateTransition View.
This tool shows a dialog allowing to select an existing _State_ to associate to the new _ExhibitState_.

== v2024.7.0

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/298[#298] [syson] Add standard libraries and new models now have a root Namespace to conform with KerML/SysML specifications.
- https://github.com/eclipse-syson/syson/issues/334[#334] [diagrams] Generalization of StateTransition descriptions.
  * Rename `AbstractDiagramDescriptionProvider` `nameGenerator` as `descriptionNameGenerator`. Impacted concrete implementations: `ActionFlowViewDiagramDescriptionProvider`, `GeneralViewDiagramDescriptionProvider`,  `InterconnectionViewForDefinitionDiagramDescriptionProvider`, `InterconnectionViewForUsageDiagramDescriptionProvider`, `StateTransitionViewDiagramDescriptionProvider`.
  * Rename `syson-diagram-statetransition-view` `CompartmentNodeDescriptionProvider` as `StateTransitionActionsCompartmentNodeDescriptionProvider`.
  * `StateTransitionViewEdgeService` removed, services moved to `ViewEdgeService` and `ViewLabelService`.
  * `StateTransitionActionToolProvider` moved to `syson-diagram-common-view`
  * `StateTransitionCompartmentNodeToolProvider` moved to `syson-diagram-common-view`
  * `createState` and `createOwnedAction` services moved to `ViewToolService`
- https://github.com/eclipse-syson/syson/issues/349[#349] [syson] Switch to sirius-web domain driven design architecture.
Please download your existing SysON projects before moving to this new version.
A reset of the database is needed.
- https://github.com/eclipse-syson/syson/issues/393[#393] [diagrams] Code refactoring:
  * Move `AbstractDiagramDescriptionProvider#createNodeToolFromDiagramBackground(NodeDescription, EClassifier)` to new `ToolDescriptionService`