@@ -1,0 +1,162 @@
+/*******************************************************************************
+ * Copyright (c) 2024 Obeo.
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v2.0
+ * which accompanies this distribution, and is available at
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
+ *
+ * Contributors:
+ *     Obeo - initial API and implementation
+ *******************************************************************************/
+package org.eclipse.syson.diagram.interconnection.view.edges;
+
+import java.util.List;
+import java.util.Objects;
+
+import org.eclipse.sirius.components.view.builder.IViewDiagramElementFinder;
+import org.eclipse.sirius.components.view.builder.generated.DiagramBuilders;
+import org.eclipse.sirius.components.view.builder.generated.ViewBuilders;
+import org.eclipse.sirius.components.view.builder.providers.IColorProvider;
+import org.eclipse.sirius.components.view.builder.providers.IEdgeDescriptionProvider;
+import org.eclipse.sirius.components.view.diagram.ArrowStyle;
+import org.eclipse.sirius.components.view.diagram.DiagramDescription;
+import org.eclipse.sirius.components.view.diagram.EdgeDescription;
+import org.eclipse.sirius.components.view.diagram.EdgePalette;
+import org.eclipse.sirius.components.view.diagram.EdgeReconnectionTool;
+import org.eclipse.sirius.components.view.diagram.EdgeStyle;
+import org.eclipse.sirius.components.view.diagram.LineStyle;
+import org.eclipse.sirius.components.view.diagram.SourceEdgeEndReconnectionTool;
+import org.eclipse.sirius.components.view.diagram.SynchronizationPolicy;
+import org.eclipse.sirius.components.view.diagram.TargetEdgeEndReconnectionTool;
+import org.eclipse.sirius.components.view.diagram.provider.DefaultToolsFactory;
+import org.eclipse.syson.diagram.interconnection.view.nodes.RootPortUsageBorderNodeDescriptionProvider;
+import org.eclipse.syson.sysml.FlowConnectionUsage;
+import org.eclipse.syson.sysml.ItemUsage;
+import org.eclipse.syson.sysml.PortUsage;
+import org.eclipse.syson.sysml.SysmlPackage;
+import org.eclipse.syson.util.AQLConstants;
+import org.eclipse.syson.util.IDescriptionNameGenerator;
+import org.eclipse.syson.util.SysMLMetamodelHelper;
+import org.eclipse.syson.util.ViewConstants;
+
+/**
+ * Used to describe an {@link FlowConnectionUsage} edge between two {@link PortUsage}/{@link ItemUsage}.
+ *
+ * @author arichard
+ */
+public class FlowConnectionUsageEdgeDescriptionProvider implements IEdgeDescriptionProvider {
+
+    private final ViewBuilders viewBuilderHelper = new ViewBuilders();
+
+    private final DiagramBuilders diagramBuilderHelper = new DiagramBuilders();
+
+    private final DefaultToolsFactory defaultToolsFactory = new DefaultToolsFactory();
+
+    private final IColorProvider colorProvider;
+
+    private final IDescriptionNameGenerator descriptionNameGenerator;
+
+    public FlowConnectionUsageEdgeDescriptionProvider(IColorProvider colorProvider, IDescriptionNameGenerator descriptionNameGenerator) {
+        this.colorProvider = Objects.requireNonNull(colorProvider);
+        this.descriptionNameGenerator = Objects.requireNonNull(descriptionNameGenerator);
+    }
+
+    @Override
+    public EdgeDescription create() {
+        String domainType = SysMLMetamodelHelper.buildQualifiedName(SysmlPackage.eINSTANCE.getFlowConnectionUsage());
+        return this.diagramBuilderHelper.newEdgeDescription()
+                .domainType(domainType)
+                .isDomainBasedEdge(true)
+                .centerLabelExpression("aql:self.getEdgeLabel()")
+                .name(this.getName())
+                .semanticCandidatesExpression("aql:self.getAllReachable(" + domainType + ")")
+                .sourceNodesExpression("aql:self.getSourcePort()")
+                .style(this.createEdgeStyle())
+                .synchronizationPolicy(SynchronizationPolicy.SYNCHRONIZED)
+                .targetNodesExpression("aql:self.getTargetPort()")
+                .build();
+    }
+
+    @Override
+    public void link(DiagramDescription diagramDescription, IViewDiagramElementFinder cache) {
+        var optEdgeDescription = cache.getEdgeDescription(this.getName());
+        var optRootPortUsageBorderNodeDescription = cache.getNodeDescription(RootPortUsageBorderNodeDescriptionProvider.NAME);
+        var optPortUsageBorderNodeDescription = cache.getNodeDescription(this.descriptionNameGenerator.getBorderNodeName(SysmlPackage.eINSTANCE.getPortUsage()));
+
+        if (optEdgeDescription.isPresent() && optRootPortUsageBorderNodeDescription.isPresent() && optPortUsageBorderNodeDescription.isPresent()) {
+            EdgeDescription edgeDescription = optEdgeDescription.get();
+            diagramDescription.getEdgeDescriptions().add(edgeDescription);
+            edgeDescription.getSourceNodeDescriptions().add(optRootPortUsageBorderNodeDescription.get());
+            edgeDescription.getSourceNodeDescriptions().add(optPortUsageBorderNodeDescription.get());
+            edgeDescription.getTargetNodeDescriptions().add(optRootPortUsageBorderNodeDescription.get());
+            edgeDescription.getTargetNodeDescriptions().add(optPortUsageBorderNodeDescription.get());
+            edgeDescription.setPalette(this.createEdgePalette(List.of(this.createSourceReconnectTool(), this.createTargetReconnectTool())));
+        }
+    }
+
+    public String getName() {
+        return this.descriptionNameGenerator.getEdgeName(SysmlPackage.eINSTANCE.getFlowConnectionUsage());
+    }
+
+    private EdgeStyle createEdgeStyle() {
+        return this.diagramBuilderHelper.newEdgeStyle()
+                .borderSize(0)
+                .color(this.colorProvider.getColor(ViewConstants.DEFAULT_EDGE_COLOR))
+                .edgeWidth(1)
+                .lineStyle(LineStyle.SOLID)
+                .sourceArrowStyle(ArrowStyle.NONE)
+                .targetArrowStyle(ArrowStyle.NONE)
+                .build();
+    }
+
+    private EdgePalette createEdgePalette(List<EdgeReconnectionTool> edgeReconnectionTools) {
+        var changeContext = this.viewBuilderHelper.newChangeContext()
+                .expression("aql:self.deleteFromModel()");
+
+        var deleteTool = this.diagramBuilderHelper.newDeleteTool()
+                .name("Delete from Model")
+                .body(changeContext.build());
+
+        var callEditService = this.viewBuilderHelper.newChangeContext()
+                .expression(AQLConstants.AQL_SELF + ".editEdgeCenterLabel(newLabel)");
+
+        var editTool = this.diagramBuilderHelper.newLabelEditTool()
+                .name("Edit")
+                .initialDirectEditLabelExpression(AQLConstants.AQL_SELF + ".getDefaultInitialDirectEditLabel()")
+                .body(callEditService.build());
+
+        return this.diagramBuilderHelper
+                .newEdgePalette()
+                .deleteTool(deleteTool.build())
+                .edgeReconnectionTools(edgeReconnectionTools.toArray(EdgeReconnectionTool[]::new))
+                .centerLabelEditTool(editTool.build())
+                .toolSections(this.defaultToolsFactory.createDefaultHideRevealEdgeToolSection())
+                .build();
+    }
+
+    private SourceEdgeEndReconnectionTool createSourceReconnectTool() {
+        var builder = this.diagramBuilderHelper.newSourceEdgeEndReconnectionTool();
+
+        var setSourcePort = this.viewBuilderHelper.newChangeContext()
+                .expression(AQLConstants.AQL + AQLConstants.EDGE_SEMANTIC_ELEMENT + ".setSourcePort(" + AQLConstants.SEMANTIC_RECONNECTION_TARGET + ")");
+
+        return builder
+                .name("Reconnect Source")
+                .body(setSourcePort.build())
+                .build();
+    }
+
+    private TargetEdgeEndReconnectionTool createTargetReconnectTool() {
+        var builder = this.diagramBuilderHelper.newTargetEdgeEndReconnectionTool();
+
+        var setTargetPort = this.viewBuilderHelper.newChangeContext()
+                .expression(AQLConstants.AQL + AQLConstants.EDGE_SEMANTIC_ELEMENT + ".setTargetPort(" + AQLConstants.SEMANTIC_RECONNECTION_TARGET + ")");
+
+        return builder
+                .name("Reconnect Target")
+                .body(setTargetPort.build())
+                .build();
+    }
+}
