@@ -64,3 +64,5 @@ image::release-notes-show-hide-icons-in-diagram.png[Show/Hide Icons in Diagram]
 
 - Add a new tool allowing to create an _ExhibitState_ at the root of General View and StateTransition View.
 This tool shows a dialog allowing to select an existing _State_ to associate to the new _ExhibitState_.
+- Handle _FlowConnectionUsage_ between _PortUsages_ in Interconnection View.
+A new edge tool allows to create a flow between two ports.
